# Agentic-Event-Store-Enterprise-Audit-Infrastructure

./: .env.example  .gitignore  DESIGN.md  DOMAIN_NOTES.md  FINAL_REPORT.md  PRESENTATION_SCRIPT.md  README.md  docker-compose.yml  main.py  pyproject.toml
.refinery/: extraction_ledger.jsonl
.refinery/profiles/: 815b989eb3003b78.json  901507995ef61b9b.json  961ce74c05457864.json  c240d4f9e4a6e71a.json  ce389692e4ba75f3.json  d4899583669d2e66.json
agentic_event_store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dashboard/: index.html  server.py
dashboard-ui/: middleware.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
dashboard-ui/app/: api.ts  globals.css  layout.tsx  page.tsx  types.ts
demo/: step1_week_standard.py  step2_concurrency.py  step3_temporal_query.py  step4_upcasting.py  step5_gas_town.py  step6_what_if.py
ledger/adapters/: week3_adapter.py
scripts/: generate_financials_from_events.py  load_registry.py  query_seeded_data.py  run_agent1.py  run_agent2.py  run_agent3.py  run_agent4.py  run_agent5.py  run_pipeline.py  seed_from_starter.py
src/: event_store.py  schema.sql
src/aggregates/: agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: compliance_agent.py  credit_analysis.py  decision_orchestrator.py  document_processing.py  fraud_detection.py  handlers.py
src/integrity/: audit_chain.py  gas_town.py
src/mcp/: resources.py  server.py  tools.py
src/models/: events.py
src/projections/: __init__.py  agent_performance.py  application_summary.py  compliance_audit.py  daemon.py
src/registry/: client.py
tests/: conftest.py  test_concurrency.py  test_gas_town.py  test_mcp_lifecycle.py  test_projections.py  test_upcasting.py
(+16 files in other folders)
