[project]
name = "agentic-event-store"
version = "0.1.0"
description = "The Ledger — Agentic Event Store & Enterprise Audit Infrastructure for multi-agent AI systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "pydantic>=2.10.0",
    "mcp>=1.0.0",
    "pdfplumber>=0.11.9",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "typer>=0.24.1",
    "rich>=14.3.3",
    "pymupdf>=1.27.2.2",
    "streamlit>=1.55.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
